footer correction and word alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,3 +94,18 @@ p{
     background-color: #39393A;
     margin-bottom: 20px;
 }
+
+.slider .slides li .caption {
+    top: 3%;
+}
+
+.page-footer{
+        padding-top: 20px;
+        margin-top: 40px;
+        padding-bottom: 30px;
+        font-size: 1rem;
+}
+
+.slider .indicators{
+    bottom: -12px;
+}
